[tool.poetry]
name = "xmas-linebot-app"
version = "0.1.0"
description = ""
authors = ["Chou Hung-Yi <hychou.svm@gmail.com>"]
readme = "README.md"
packages = [{include = "xmas_linebot_app"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.20.0"}
line-bot-sdk = "^2.3.0"
numpy = "^1.23.5"
pillow = "^9.3.0"
opencv-python = "^4.6.0.66"
httpx = "^0.23.1"
scikit-image = "^0.19.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
